--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-lazy-load-image-component": "^1.5.5",
         "react-outside-click-handler": "^1.3.0",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
@@ -24,6 +25,7 @@
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
+        "@types/react-lazy-load-image-component": "^1.5.2",
         "autoprefixer": "^10.4.12",
         "postcss": "^8.4.17",
         "react-icons": "^4.4.0",
